@@ -73,8 +73,9 @@ private:
     static int S_player_count;
 
     int M_ghost_count; //!< count that this object is recognized as a ghost object.
-
     int M_tackle_count; //!< time count since the last tackle observation
+
+    std::list< Vector2D > M_pos_history;
 
 public:
 
@@ -183,6 +184,15 @@ public:
     bool faceValid() const
       {
           return M_face_count < S_face_count_thr;
+      }
+
+    /*!
+      \brief get the history of estimated position.
+      \return position list. the front element is the position at the previous cycle.
+     */
+    const std::list< Vector2D > & posHistory() const
+      {
+          return M_pos_history;
       }
 
     /*!
