@@ -819,7 +819,7 @@ WorldModel::update( const ActionEffector & act,
 
     // internal update
     M_self.update( act, current );
-    M_ball.update( act, gameMode(), current );
+    M_ball.update( act, gameMode() );
 
 #ifdef DEBUG_PRINT
     if ( M_ball.rposValid() )
@@ -5308,7 +5308,7 @@ WorldModel::checkGhost( const ViewArea & varea )
             dlog.addText( Logger::WORLD,
                           __FILE__" (checkGhost) forget ball." );
 #endif
-            M_ball.setGhost( this->time() );
+            M_ball.setGhost();
         }
     }
 
